# MLOps-Lab3

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  CICD.yml
api/: api.py
cli/: cli.py
mylib/: classifier.py  config.py
notebooks/: best_model_serialization.ipynb  config.py
templates/: home.html
tests/: test_api.py  test_cli.py  test_logic.py
